Issue #17430: Changing Java Version in Pom to 21